erDiagram

    CONTAINERS {
        serial      id              PK
        int         percentFull
        localdate   lastEmpty
        boolean     needEmpty
        varchar7    color
        enum        category
        double      current_weight_kg
        double      max_weight_kg
    }

    WASTES {
        serial      id              PK
        double      weight
        localdate   date
        int         container_id    FK
    }

    ALERTS {
        serial      id              PK
        varchar255  message
        int         percentAlert
        boolean     cleared
        localdate   date
        int         container_id    FK
    }

    CONTAINERS ||--o{ WASTES  : "acumula"
    CONTAINERS ||--o{ ALERTS  : "dispara"